--- a/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
+++ b/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
@@ -1,29 +1,29 @@
 ## 主要文件
-AP_Arming.cpp         通电启动后蜂鸣器声音、在进行校准时的声音、电机解锁BB声
-fence.cpp             地理限制区，阻止无人车入禁行区
-motor_test.cpp        MavLink进行电机测试
-mode.cpp              飞行模式初始化和切换
-mode_acro.cpp         特技
-mode_althold.cpp      定高
-mode_auto.cpp         自动
-mode_autotune.cpp     自动调参
-mode_circle.cpp       绕圈
-mode_drift.cpp        漂移
-mode_flip.cpp         空翻
-mode_guided.cpp       引导
-mode_land.cpp         着陆
-mode_poshold.cpp      定点
-mode_rtl.cpp          返航
-mode_sport.cpp        运动
-mode_stabilize.cpp    自稳
-GCS_Mavlink.cpp       地面通信站
-failsafe.cpp          失控保护
-log.cpp               飞行日志
-Parameters.h          定义了两个全局参数类，类中包含各种参数的定义
-Define.h              各种宏定义
-inertia.h             从加速度计读取惯性力
-ekf_check.cpp         检测EKF或惯性导航系统的故障触发飞行的警报并帮助采取对策
-esc_calibration.cpp   检查和执行ESC校准的功能
-events.cpp            当故障安全更改时将调用此事件。
+1.  AP_Arming.cpp         通电启动后蜂鸣器声音、在进行校准时的声音、电机解锁BB声
+2.  fence.cpp             地理限制区，阻止无人车入禁行区
+3.  motor_test.cpp        MavLink进行电机测试
+4.  mode.cpp              飞行模式初始化和切换
+5.  mode_acro.cpp         特技
+6.  mode_althold.cpp      定高
+7.  mode_auto.cpp         自动
+8.  mode_autotune.cpp     自动调参
+9.  mode_circle.cpp       绕圈
+10. mode_drift.cpp        漂移
+11. mode_flip.cpp         空翻
+12. mode_guided.cpp       引导
+13. mode_land.cpp         着陆
+14. mode_poshold.cpp      定点
+15. mode_rtl.cpp          返航
+16. mode_sport.cpp        运动
+17. mode_stabilize.cpp    自稳
+18. GCS_Mavlink.cpp       地面通信站
+19. failsafe.cpp          失控保护
+20. log.cpp               飞行日志
+21. Parameters.h          定义了两个全局参数类，类中包含各种参数的定义
+22. Define.h              各种宏定义
+23. inertia.h             从加速度计读取惯性力
+24. ekf_check.cpp         检测EKF或惯性导航系统的故障触发飞行的警报并帮助采取对策
+25. esc_calibration.cpp   检查和执行ESC校准的功能
+26. events.cpp            当故障安全更改时将调用此事件。
 
 
