--- a/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
+++ b/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
@@ -1,5 +1,5 @@
 ## 主要文件
-1.  AP_Arming.cpp         通电启动后蜂鸣器声音、在进行校准时的声音、电机解锁BB声
+1.  AP_Arming.cpp         
 2.  fence.cpp             地理限制区，阻止无人车入禁行区
 3.  motor_test.cpp        MavLink进行电机测试
 4.  mode.cpp              飞行模式初始化和切换
