--- a/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
+++ b/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
@@ -4,18 +4,16 @@
 3.  motor_test.cpp        MavLink进行电机测试
 4.  mode.cpp              飞行模式初始化和切换
 5.  mode_acro.cpp         特技
-6.  mode_althold.cpp      定高
-7.  mode_auto.cpp         自动
-8.  mode_autotune.cpp     自动调参
-9.  mode_circle.cpp       绕圈
-10. mode_drift.cpp        漂移
-11. mode_flip.cpp         空翻
-12. mode_guided.cpp       引导
-13. mode_land.cpp         着陆
-14. mode_poshold.cpp      定点
-15. mode_rtl.cpp          返航
-16. mode_sport.cpp        运动
-17. mode_stabilize.cpp    自稳
+6.  mode_auto.cpp         自动行驶
+7.  mode_follow.cpp       跟随
+8.  mode_guided.cpp
+9.  mode_hold.cpp
+10. mode_loiter.cpp
+11. mode_manual.cpp
+12. mode_rtl.cpp
+13. mode_simple.cpp
+14. mode_smart_rtl.cpp
+15. mode_steering.cpp
 18. GCS_Mavlink.cpp       地面通信站
 19. failsafe.cpp          失控保护
 20. log.cpp               飞行日志
