--- a/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
+++ b/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
@@ -1,5 +1,22 @@
 ## 主要文件
-1.  AP_Arming.cpp         
+1.  AP_Arming.cpp
+2.  AP_MotorsUGV.cpp
+3.  AP_Rally.cpp
+4.  GCS_Mavlink.cpp
+5.  GCS_Rover.cpp
+6.  Log.cpp
+7.  Parameters.cpp
+8.  RC_Channel.cpp
+9.  Rover.cpp
+10. Steering.cpp
+11. afs_rover.cpp
+12. balance_bot.cpp
+13. commands.cpp
+14. compat.cpp
+15. crash_check.cpp
+16. cruise_learn.cpp
+17. ekf_check.cpp
+18. failsafe.cpp
 2.  fence.cpp             地理限制区，阻止无人车入禁行区
 3.  motor_test.cpp        MavLink进行电机测试
 4.  mode.cpp              飞行模式初始化和切换
@@ -14,14 +31,4 @@
 13. mode_simple.cpp
 14. mode_smart_rtl.cpp
 15. mode_steering.cpp
-18. GCS_Mavlink.cpp       地面通信站
-19. failsafe.cpp          失控保护
-20. log.cpp               飞行日志
-21. Parameters.h          定义了两个全局参数类，类中包含各种参数的定义
-22. Define.h              各种宏定义
-23. inertia.h             从加速度计读取惯性力
-24. ekf_check.cpp         检测EKF或惯性导航系统的故障触发飞行的警报并帮助采取对策
-25. esc_calibration.cpp   检查和执行ESC校准的功能
-26. events.cpp            当故障安全更改时将调用此事件。
-
-
+18.
