--- a/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
+++ b/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
@@ -31,4 +31,8 @@
 13. mode_simple.cpp
 14. mode_smart_rtl.cpp
 15. mode_steering.cpp
-18.
+33. radio.cpp
+34. sailboat.cpp
+35. sensors.cpp
+36. system.cpp
+37. version.cpp
