--- a/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
+++ b/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
@@ -23,11 +23,11 @@
 5.  mode_acro.cpp         特技
 6.  mode_auto.cpp         自动行驶
 7.  mode_follow.cpp       跟随
-8.  mode_guided.cpp
-9.  mode_hold.cpp
-10. mode_loiter.cpp
-11. mode_manual.cpp
-12. mode_rtl.cpp
+8.  mode_guided.cpp       引导
+9.  mode_hold.cpp         保持当前状态
+10. mode_loiter.cpp       悬停
+11. mode_manual.cpp       手动控制
+12. mode_rtl.cpp          返航
 13. mode_simple.cpp
 14. mode_smart_rtl.cpp
 15. mode_steering.cpp
