--- a/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
+++ b/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
@@ -2,21 +2,21 @@
 1.  AP_Arming.cpp
 2.  AP_MotorsUGV.cpp
 3.  AP_Rally.cpp
-4.  GCS_Mavlink.cpp
+4.  GCS_Mavlink.cpp       地面站通信代码
 5.  GCS_Rover.cpp
-6.  Log.cpp
+6.  Log.cpp               行驶日志
 7.  Parameters.cpp
-8.  RC_Channel.cpp
+8.  RC_Channel.cpp        设置相关参数的最大和最小值
 9.  Rover.cpp
 10. Steering.cpp
 11. afs_rover.cpp
 12. balance_bot.cpp
 13. commands.cpp
 14. compat.cpp
-15. crash_check.cpp
+15. crash_check.cpp       如果检测到碰撞，且车辆在超过角度限制20度的情况下连续超过1秒检测到碰撞，则锁定电机
 16. cruise_learn.cpp
-17. ekf_check.cpp
-18. failsafe.cpp
+17. ekf_check.cpp         检测扩展卡尔曼滤波器或惯性导航系统的故障，触发对飞行员的警报，并帮助采取对策
+18. failsafe.cpp          故障保护
 2.  fence.cpp             地理限制区，阻止无人车入禁行区
 3.  motor_test.cpp        MavLink进行电机测试
 4.  mode.cpp              飞行模式初始化和切换
@@ -27,11 +27,11 @@
 9.  mode_hold.cpp         保持当前状态
 10. mode_loiter.cpp       悬停
 11. mode_manual.cpp       手动控制
-12. mode_rtl.cpp          返航
-13. mode_simple.cpp
-14. mode_smart_rtl.cpp
-15. mode_steering.cpp
-33. radio.cpp
+12. mode_rtl.cpp          自动返航，走直线到初始位置
+13. mode_simple.cpp       简单操控模式
+14. mode_smart_rtl.cpp    自动返航，走原始路线返航到初始位置
+15. mode_steering.cpp     转向模式
+33. radio.cpp             遥控器信号输入
 34. sailboat.cpp
 35. sensors.cpp
 36. system.cpp
