--- a/Ardupilot代码解析/硬件驱动和通信协议.md
+++ b/Ardupilot代码解析/硬件驱动和通信协议.md
@@ -12,3 +12,8 @@ SPI的特性则为，一根主线一根支线，其数据传输速度为20MHz以
 一主线一支线，与上面两个通信协议相比，UART的通信距离更远且速度相对较快，至少需要4个PIN口和2个可选择的PIN口
 4. CAN bus with UAVCAN
 CAN的特性为，可以有许多主线，任何节点都可以在需要时启动数据传输，基于数据包的远距离协议，虽然其速度快但是只有50%的总线比特率在有许多数据往来时会严重影响其速度和传输质量。至少需要3个PIN口（GND、CAN HI、CAN LO），点到点拓扑结构，但是不建议使用星形或树桩拓扑且总线每端都需要终止
+
+## Ardupilot 数据处理流程
+1. 来自传感器的原始数据被收集，然后转换成标准单元，接下来就会保存在驱动程序的缓冲区中
+2. 车辆代码的主线程底气运行，并通过驾驶员前段的方法访问可用的最新数据。为了计算最新的姿态估计，AHRS/EKF将从传感器驱动前段提取最新的加速度计，陀螺仪和罗盘信息
+3. 使用I2C或者SPI协议的驱动必须在后台线程中运行，以便于传感器的高速通信不会影响主循环的效率，但对于使用UART的驱动，在主线程中运行时安全的，因为底层的串行驱动程序本身在后台手机数据并包含一个缓冲区
