--- a/Ardupilot代码解析/传感器.md
+++ b/Ardupilot代码解析/传感器.md
@@ -4,7 +4,7 @@
 3. 初始化视觉里程计
 4. 跟新车轮编码器  
   (1). 如果未启用立即退出 -> 更新编码器 -> 在第一次迭代时初始化  
-  (2). 在Ardupilot官方代码中， 有对接下来步骤的详细解释   
+  (2). 在Ardupilot官方代码中， 有对接下来步骤的详细解释：   
        计算增量角度和增量时间并发送给扩展卡尔曼滤波器  
        使用来自车轮编码器的最后一次ping的时间  
        发送增量时间（这个轮子的编码器时间与前面车轮的编码器时间）  
