--- a/Ardupilot代码解析/传感器.md
+++ b/Ardupilot代码解析/传感器.md
@@ -1,24 +1,24 @@
 ## sensor.cpp
-1. 初始化罗盘 -> 检查新的罗盘数据 -> 保存罗盘偏移量
-2. 初始化信标用于接收不到GPS信号时的位置估计
-3. 初始化视觉里程计
-4. 跟新车轮编码器  
-  (1). 如果未启用立即退出 -> 更新编码器 -> 在第一次迭代时初始化  
-  (2). 在Ardupilot官方代码中， 有对接下来步骤的详细解释：   
-       计算增量角度和增量时间并发送给扩展卡尔曼滤波器  
-       使用来自车轮编码器的最后一次ping的时间  
-       发送增量时间（这个轮子的编码器时间与前面车轮的编码器时间）  
-       如果车轮没有移动，则计数=0（限制增量时间或者系统时间为50ms）  
-       使用上次更新的系统时钟而不是上次的ping时间  
-  (3). 计算角度变化
-  (4). 保存当前时间的累计距离
-  ##### (5). 如果我们没有收到任何传感器更新或者时间差太大，则使用上次更新到扩展卡尔曼滤波器的数据  
-  (6). 检查旧的传感器更新时间
-  ##### delAng-增量角度是上一个状态中角度位置的测量变化，即车辆向前移动是产生的正向旋转（rad）
-  ##### delTime-增量时间是测量延迟的时间间隔（秒）
-  ##### timeStamp_ms-是上次测量旋转的时间
-  ##### posoffset-是轮毂的XYZ车身框架位置
-  (7) 记录下一次迭代的系统更新时间  
+### 1. 初始化罗盘 -> 检查新的罗盘数据 -> 保存罗盘偏移量
+### 2. 初始化信标用于接收不到GPS信号时的位置估计
+### 3. 初始化视觉里程计
+### 4. 跟新车轮编码器  
+       (1). 如果未启用立即退出 -> 更新编码器 -> 在第一次迭代时初始化  
+       (2). 在Ardupilot官方代码中， 有对接下来步骤的详细解释：   
+            计算增量角度和增量时间并发送给扩展卡尔曼滤波器  
+            使用来自车轮编码器的最后一次ping的时间  
+            发送增量时间（这个轮子的编码器时间与前面车轮的编码器时间）  
+            如果车轮没有移动，则计数=0（限制增量时间或者系统时间为50ms）  
+            使用上次更新的系统时钟而不是上次的ping时间  
+       (3). 计算角度变化
+       (4). 保存当前时间的累计距离
+        ##### (5). 如果我们没有收到任何传感器更新或者时间差太大，则使用上次更新到扩展卡尔曼滤波器的数据  
+        (6). 检查旧的传感器更新时间
+               ##### delAng-增量角度是上一个状态中角度位置的测量变化，即车辆向前移动是产生的正向旋转（rad）
+               ##### delTime-增量时间是测量延迟的时间间隔（秒）
+               ##### timeStamp_ms-是上次测量旋转的时间
+               ##### posoffset-是轮毂的XYZ车身框架位置
+        (7) 记录下一次迭代的系统更新时间  
   
 5. 加速度计校准
 6. 测距仪  
