--- a/Ardupilot代码解析/传感器.md
+++ b/Ardupilot代码解析/传感器.md
@@ -20,8 +20,8 @@
                ##### posoffset-是轮毂的XYZ车身框架位置
         (7) 记录下一次迭代的系统更新时间  
   
-5. 加速度计校准
-6. 测距仪  
+### 5. 加速度计校准
+### 6. 测距仪  
 根据Ardupilot的官方介绍，我们可以安装两种测距仪用来实现避障，在程序中如若发现障碍物，会在飞行日志中记录下来测距仪的数据和高度。如果没有检测到物体，则会在转弯后重置时间
-7. 初始化proximity sensor
-8. 更新转速传感器
+### 7. 初始化proximity sensor
+### 8. 更新转速传感器
