--- a/Ardupilot代码解析/解锁检查.md
+++ b/Ardupilot代码解析/解锁检查.md
@@ -1,6 +1,17 @@
 ## 解锁检查~~~ Pre_Arm
 这是Ardupilot的解锁机制，在Full Parameter List中可以找到对应的相关名称即 ARM_CHECK
 ## 无法解锁可能原因
-1. 在固件为飞机的情况下，遥控器是需要预先解锁的，在我们遥控器中的解锁方式为遥控器左侧摇杆下拉到最低，同时右侧摇杆拨到最右侧（我们的ROVER目前无需用到
-此项解锁方式，如若以后碰到遥控器出现无法遥控现象可以尝试该解锁方式，在我的一次调试中就出现刷新完固件之后遥控器出现无法遥控ROVER，在使用了这个方法之后
-成功解锁）
+### 1. 可能需要预先解锁
+在固件为飞机的情况下，遥控器是需要预先解锁的，在我们遥控器中的解锁方式为遥控器左侧摇杆下拉到最低，同时右侧摇杆拨到最右侧（我们的ROVER目前无需用到此项解锁方式，如若以后碰到遥控器出现无法遥控现象可以尝试该解锁方式，在我的一次调试中就出现刷新完固件之后遥控器出现无法遥控ROVER，在使用了这个方法之后成功解锁）
+### 2. GPS
+     (1). 通常情况下在室内GPS是无法正常工作的，这时飞控的指示灯通常为蓝色代表飞控是锁定状态，这种情况只需要拿到室外有GPS信号时会自动消失成功解锁 
+     (2). 当GPS漂移速度过快时会出现故障，该情况可能是加速度计没有校准对，导致误读信号或者也可能是因为GPS信号弱造成的
+### Compass Problem
+#### 以下为罗盘会报错的所有形式
+    (1). compass not healthy
+    (2). compass not calibrated
+    (3). compass offsets too high: 罗盘偏移量大于500，罗盘的偏移量计算方法为（sqrt(X²+Y²+Z²)）. 这个原因之前在Mission Planner的调试说明中写道过，可能是由于金属物体距离罗盘过近导致的，在官方说明中明确建议不只是使用飞控的内置罗盘因为板中的金属可能会对内置罗盘造成较大的偏移量，在实际的测试过程中也确实碰见过两个罗盘相差较大的问题（有一个罗盘指示是正常有一个指示的角度与实际正确的角度相差90度甚至180度），导致在自动行驶模式下，ROVER会在两个罗盘的夹角范围内连续改变自己的行驶方向
+    (4). check mag field： 这个故障表示目前所在区域的磁场比预期值高或低35%，此情况出现也应重新校准罗盘
+    (5). compass inconsistent：罗盘方向不一致,即内置罗盘和外置罗盘指向不同的方向导致，在实际测试中大约超过45度左右时会出现此类情况。另外查到的原因可能是有外部罗盘设置不正确引起
+    
+### 相关代码分析
