--- a/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
+++ b/Ardupilot代码解析/文件库集合和代码名称翻译集合.md
@@ -1,20 +1,20 @@
 ## 主要文件
-1.  AP_Arming.cpp
-2.  AP_MotorsUGV.cpp
+1.  AP_Arming.cpp         对RC和GPS进行解锁前检查
+2.  AP_MotorsUGV.cpp      遥控器输出通道和车辆行驶的相关规定
 3.  AP_Rally.cpp
 4.  GCS_Mavlink.cpp       地面站通信代码
-5.  GCS_Rover.cpp
+5.  GCS_Rover.cpp         调用传感器
 6.  Log.cpp               行驶日志
-7.  Parameters.cpp
+7.  Parameters.cpp        参数设定
 8.  RC_Channel.cpp        设置相关参数的最大和最小值
-9.  Rover.cpp
-10. Steering.cpp
-11. afs_rover.cpp
-12. balance_bot.cpp
-13. commands.cpp
+9.  Rover.cpp             主要固件
+10. Steering.cpp          转向
+11. afs_rover.cpp          
+12. balance_bot.cpp       俯仰角度
+13. commands.cpp          home位置
 14. compat.cpp
-15. crash_check.cpp       如果检测到碰撞，且车辆在超过角度限制20度的情况下连续超过1秒检测到碰撞，则锁定电机
-16. cruise_learn.cpp
+15. crash_check.cpp       如果检测到碰撞，且车辆在超过角度限制的情况下连续超过1秒检测到碰撞，则锁定电机
+16. cruise_learn.cpp      巡航学习
 17. ekf_check.cpp         检测扩展卡尔曼滤波器或惯性导航系统的故障，触发对飞行员的警报，并帮助采取对策
 18. failsafe.cpp          故障保护
 2.  fence.cpp             地理限制区，阻止无人车入禁行区
@@ -32,7 +32,34 @@
 14. mode_smart_rtl.cpp    自动返航，走原始路线返航到初始位置
 15. mode_steering.cpp     转向模式
 33. radio.cpp             遥控器信号输入
-34. sailboat.cpp
-35. sensors.cpp
+34. sailboat.cpp          帆船模式（目前尚不理解其作用）
+35. sensors.cpp           传感器种类
 36. system.cpp
 37. version.cpp
+
+
+## library
+### Sensor Library
+AP_InertialSensor  读取陀螺仪和加速度计数据，然后进行校准，并以标准单位向主代码和其他库提供数据  
+AP_RangFinder      声纳和红外距离传感器接口库  
+AP_Baro            气压计接口库  
+AP_GPS             GPS接口库  
+AP_Compass         3轴罗盘接口库  
+AP_OpticalFlow     光流传感器接口库  
+### Core Libraries
+AP_AHRS            使用DCM或者EKF进行姿态估计  
+AP_Common          核心包括所有草图和库所需要的  
+AP_Math            各种数学函数，特别适用于矢量操作  
+AC_PID             PID控制器库（Proportional Integral Derivative）  
+AP_InertialNav     用于将加速度计输入与GPS和Baro数据混合的惯性导航库  
+AC_WPNav           航点导航库  
+RC_Channel         将来自APM的PWM输入/输出转换为内部单位像角度  
+AP_HAL             以下三个库军用来实现硬件抽象层，向高级代码提供相同的接口，以便更容易地将其移植到不同的板上
+AP_HAL_ChibiOS
+AP_HAL_Linux
+# Other Libraries
+AP_Mount
+AP_Camera
+AP_Relay
+AP_Mission
+AP_Buffer
