--- a/Ardupilot代码解析/传感器.md
+++ b/Ardupilot代码解析/传感器.md
@@ -45,3 +45,4 @@ _accel.voter.get_best(hrt_absolute_time(), &best_index)
 然后使用下面这个函数  
 orb_publish(ORB_ID(sensor_combined), _sensor_pub, &raw)
 使所有传感器的数据发布出去
+#### 最核心的一步就是把各个传感器得来的数据推送进卡尔曼滤波器就行传感器融合，最终得出我们想要得到的下一步的姿态估计
