--- a/日志相关内容.md
+++ b/日志相关内容.md
@@ -1,1 +1,25 @@
 ## 日志种类
+### DataFlash 闪存日志
+通常情况下，飞控内置了储存卡，可以记录上百次的飞行日志。另外，通过日志分析可以很容易的分析无人车或者无人机的飞行/行驶状态以及是否存在故障
+也容易通过日志分析飞行器控制参数是否需要优化
+日志下载方式
+1. 通过MAVLINK下载
+2. 通过读卡器读取飞控板的SD卡
+
+### 使用MAVlink下载日志
+1. 使用USB或者数传连接到飞行器（推荐用USB，数传可能会很慢）
+2. 打开地面站 > > 飞行数据 界面 > > 数据闪存日志 > > 通过Mavlink下载闪存日志
+3. 选中对应的日志下载即可，最后一个就是最后一次飞行的日志
+4. 下载后，日志会保存在你的地面站安装目录下面的logs的目录 MissionPlanner/logs
+
+#### 闪存日志分析
+1. 手动分析： 使用地面站的日志回顾功能。手动进行数据分析
+2. 自动分析： 使用地面站的自动分析功能，分析飞行日志，直接获得重要的问题结果报告，操作比较简单
+##### 手动分析日志
+通过Mavlink下载日志，会存放在MissionPlanner/logs下级目录，根据不同的飞行器类型命名的目录
+日志的基本格式是：
+1. 行号在日志分析窗口的左侧
+2. 固件版本号和飞行器类型在顶部可以显示
+3. FMT消息显示的是每个不同消息类型内容
+4. PARM行显示参数类型和对应的值
+5. 飞行数据信息，包括GPS，IMU
