--- a/日志相关内容.md
+++ b/日志相关内容.md
@@ -26,3 +26,4 @@
 
 通过点击选定的行，你可以看到图表和飞行数据，列标题会随之更新。下一列用图表表示的列，选中后点击“Graph this data”按钮。在这个例子中，以上ATT’S Roll-In 及 Roll数据会被图表化。滑动鼠标滚轮能够放大和缩小图表。同样你也可以选中图表中某一区域放大或缩小。通过右击鼠标，并选中“Set Scale to Default”同样可以缩小图表。点击链接Here’s  
 有一个该特征的迷你的教程。你也可以通过先点击第一列并从下拉菜单中选中第一列来忽略第一列（飞行数据信息类型）。这尤其对于通过MP浏览不同飞行模式（详见MODE信息）十分有用。再次点击第一列“Cancel”按钮清除过滤。
+![image](https://github.com/wzezhong/Rover/blob/master/images/log2.png)
