--- a/日志相关内容.md
+++ b/日志相关内容.md
@@ -67,8 +67,6 @@ BarAlt	气压计测量到的高度
 WPAlt	定高，悬停，返航或自动模式下的目标高度  
 NavThr	没用使用  
 AngBst	飞行器倾斜时会增加的油门大小，为0~1000  
-CRate	加速计与气压计估计的上升速率，单位cm/s  
-ThrOut	油门最终输出大小传送到电机（从0~1000）在自稳模式下相当于thrin+angbst  
 DCRate	飞行员想要的上升速率单位为cm/s  
 6. 地面站命令  
 CNum	在这个任务中的命令号(0总是在家，1是第一个任务）  
@@ -120,10 +118,10 @@ Radio（无线电）	ECode 1: “Late Frame” 意味着飞控超过两秒未接
 Compass（罗盘）	ECode 1: 指南针不能初始化（可能是硬件问题）ECode 0: 以上错误解决  
 Optical flow（光流）	Ecode 1: 无法初始化  
 Throttle failsafe（油门安全保护）	ECode 1: 油门降到 FS_THR_VALUE （失控油门触发值）以下，可能是飞控没有接收到遥控信号（油门），请检查遥控信号输入或者失控保护设置 ECode 0: 上述错误解决  
-6:Battery failsafe（电池低压保护）	ECode 1: 电池电压低于LOW_VOLT （低压保护触发值）或电池过度放电能力超过BATT_CAPACITY  
-7: GPS failsafe（gps安全故障）	ECode 1: gps断开锁定至少5秒钟ECode 0: gps恢复锁定  
-8: GCS failsafe（地面站安全保护）	ECode 1: 地面站操纵杆至少五秒钟未变化ECode 0: 恢复地面站更新  
-9: Fence（地理围栏）	ECode 1: 超过围栏限定高度 ECode 2: 超过围栏限定范围 ECode 3:同时超过围栏限定范围和高度 ECode 0: 飞行器回到限定范围内  
-10: Flight Mode（飞行模式）	ECode 0 ~ 17: 飞行器切换到想要的模式失败: 0=Stabilize, 1=Acro, 2=AltHold, 3=Auto, 4=Guided, 5=Loiter, 6=RTL, 7=Circle, 8=Position, 9=Land, 10=OF_Loiter, 11=Drift, 13=Sport, 14=Flip, 15=AutoTune, 16=PosHold, 17=Brake    
-11: GPS	ECode 2: GPS 故障 ECode 0: GPS 故障解除  
-12: Crash Check（撞击检查）	ECode 1: 检测到撞击  
+Battery failsafe（电池低压保护）	ECode 1: 电池电压低于LOW_VOLT （低压保护触发值）或电池过度放电能力超过BATT_CAPACITY  
+GPS failsafe（gps安全故障）	ECode 1: gps断开锁定至少5秒钟ECode 0: gps恢复锁定  
+GCS failsafe（地面站安全保护）	ECode 1: 地面站操纵杆至少五秒钟未变化ECode 0: 恢复地面站更新  
+Fence（地理围栏）	ECode 1: 超过围栏限定高度 ECode 2: 超过围栏限定范围 ECode 3:同时超过围栏限定范围和高度 ECode 0: 飞行器回到限定范围内 
+Flight Mode（飞行模式）	ECode 0 ~ 17: 飞行器切换到想要的模式失败: 0=Stabilize, 1=Acro, 2=AltHold, 3=Auto, 4=Guided, 5=Loiter, 6=RTL, 7=Circle, 8=Position, 9=Land, 10=OF_Loiter, 11=Drift, 13=Sport, 14=Flip, 15=AutoTune, 16=PosHold, 17=Brake    
+GPS	ECode 2: GPS 故障 ECode 0: GPS 故障解除  
+Crash Check（撞击检查）	ECode 1: 检测到撞击  
