--- a/日志相关内容.md
+++ b/日志相关内容.md
@@ -137,5 +137,16 @@ Tlog是在APM / PX4和地面站之间发送的MAVLink遥测消息的记录，并
 1. 打开mp的飞行数据屏幕
 2. 单击遥测日志选项卡
 3. 按“加载日志”，找到飞行的tlog文件并打开
-4. 按“play”
+4. 按“play”  
 当日志重播时，HUD界面将移动，并且地图上的飞行器位置将按照飞行中的时间进行更新。 通过“状态”选项卡可以看到单个数据值，甚至可以通过点击地图下方的“调试”复选框，将它们显示在图形中，然后双击数据图例，打开一个框，从中可以精确地选择哪个 数据字段如下图所示。 这将显示记录的数据随着飞行任务的进行而改变
+#### 提取waypoint数据
+可以按照与创建KML文件相同的步骤从tlog中提取参数和路点，但最后一步选择“Extract Params”或“Extract WPs”。  
+Extract Params将导致在.log文件旁创建一个.param文件。 此文件是分隔符，包含参数的完整列表（与eeprom中显示的顺序相同）及其在飞行过程中的值。 这可以在excel或文本编辑器中打开。  
+提取WP将创建一个或多个.txt文件，其中包含上传到APM / PX4的任务。 可以通过切换到飞行计划屏幕，右键单击地图并选择“文件加载/保存”，“加载WP文件”，在任务计划器中打开这些文件
+#### 绘制飞行数据
+1. 打开Mission Planner的飞行数据屏幕
+2. 单击遥测日志选项卡
+3. 按Tlog> Kml或Graph按钮
+4. 按Graph Log按钮
+5. 选择飞行tlog  
+当出现Graph This屏幕时，使用左或右鼠标按钮单击要显示的项目旁边的复选框。这些项目分组为“RC_CHANNELS”和“RAW_IMU”等类别 ，可打开对应的分组找到想要的栏目。
