--- a/航点规划.md
+++ b/航点规划.md
@@ -45,3 +45,10 @@ MAV_CMD_DO_PARACHUTE(Parachute enabled only)
 MAV_CMD_DO_GRIPPER(EPM enabled only)  
 MAV_CMD_DO_GUIDED_LIMITS(NAV_GUIDED only)  
 MAV_CMD_NAV_GUIDED_ENABLE(NAV_GUIDED only)  
+
+## 相机与自动操作
+1. 相机快门和云台指令3个通道
+2. 在飞行器移动的间隔时间或指定的航点上执行快门动作，如果相机安装在云台上，还可以控制云台的指向
+3. 对于简单的应用，可以手动控制航点和快门指令，对于复杂的测绘任务，自动生成任意区域的指令任务。
+4. 云台指令:DO_SET_ROI云台指向指定区域，DO_MOUNT_CONTROL云台控制到roll，pitch,yaw方向
+5. 伺服指令：DO_SET_SERVO:DO_SET_RELAY给指定的驱动信号
