--- a/安全检查程序.md
+++ b/安全检查程序.md
@@ -1,1 +1,41 @@
-
+## 1. 使用GCS地面站查看Pre-Arm错误信息
+在闪烁黄色灯时，使用者会无法解锁，而且解锁时蜂鸣器也会长鸣2下。此时你必须连接上地面站，才能排除究竟是什么问题导致了不能解锁和飞行，一般通常是 传感器未校准 或者出现了失控保护、低压设置不正确等等，下面会详细分析每种报错内容:
+## 2. 常见错误提示
+### NO RC Receiver（没有遥控器接收机）
+请检测接收机的信号输入是否正常
+解决方案  
+1. 如果是使用PPM编码器小板，检查一下PPM编码器 蓝色状态灯是否还会闪烁（可以判断PPM编码器是否还在工作）
+2. 如果使用SBUS和PPM接收机，检查接收机设置是否正确
+3. 有可能飞控硬件固件，需要返厂检修，一般可能性比较小
+### RC not calibrated （遥控器未校准）
+1. 遥控器还未校准，或者范围不在飞控记录值内，通常都是设置了遥控器或者换了遥控器导致，请重新做校准既可
+2. RC3油门通道MIN最小值及MAX最大值理想范围是1100-1900.
+3. 而其他通道最小值不要大于1300和最大值不要小于1700。理想值也是1100-1900
+### Compass not healthy（电子罗盘不健康）
+电子罗盘不健康的提示，也有可能是没有数值或者硬件损坏
+也有可能环境温度低于0下，可能会导致罗盘传感器没有数值
+解决方案  
+1. 启动
+2. 温度过低，请做好保温措施，重新上电
+3. 在地面站-状态检查罗盘数值是否正确 MX1 MY1 MZ1 \MX2 MY2 MZ2
+### Compass offsets too high
+主罗盘的偏移值(i.e. sqrt(x^2+y^2+z^2)) 大于500，就会提示这个，一般情况都是飞控或者GPS附近有磁性物体（马达、螺丝、电池等）导致，或者环境有比较强的磁场干扰。
+解决方案  
+1. 排除干扰后重新启动
+2. 重新换一个位置
+### Compasses inconsistent
+内部罗盘和外部罗盘指向不一致，通常是因为外部罗盘方向设置不正确导致的，遇到这个问题重新校准即可
+### GPS Glitch / Need 3D Fix
+如果在GPS没有定位成功的情况下使用了需要GPS的航行模式或者电子围栏被启动就会提示这两个错误
+解决方案  
+1. 如果没有安装GPS或者在室内飞行，切换到不需要GPS的模式
+2. 等待GPS被3D Fix定位
+3. NO GPS 没有检查到GPS连接线
+4. NO Fix 没有3D锁定，到开阔地
+### Bad Velocity
+一般情况下为GPS飘逸速度过快，高于规定的50CM/S
+有可能是移动速度过快或者加速度计校准不好，也有可能是GPS刷新率低于5HZ
+### Gyros not healthy
+陀螺仪数据跳动比较厉害，数值不在范围、没有数据，这也可能是一个硬件问题，或者上电时没有静止，导致的报错
+### Gyros inconsistent
+2个陀螺仪的旋转利率相差20度/秒以上，这有可能是一个硬件故障，或者是陀螺仪标定不正确
